fix swagger error
